# FireAlarm

ESP32-ESP-IDF-ThingSpeak-main/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ESP32-ESP-IDF-ThingSpeak-main/components/BME280/: bme280.c
ESP32-ESP-IDF-ThingSpeak-main/components/MHZ14/: mhz14a.h
ESP32-ESP-IDF-ThingSpeak-main/components/mq2/: component.mk  mq2.h
ESP32-ESP-IDF-ThingSpeak-main/components/mq7/: CMakeLists.txt  mq7.h
ESP32-ESP-IDF-ThingSpeak-main/main/: main.c
FireAlarm/: 07_Project_Do-Luong-Chat-Luong-Khong-Khi-Va-Canh-Bao-Chay_v02.docx  README.md
FireAlarm/components/MHZ14/: Kconfig.projbuild  mhz14a.c
FireAlarm/components/mq2/: CMakeLists.txt  Kconfig.projbuild  mq2.c
FireAlarm/components/mq7/: component.mk  mq7.c
